@@ -229,7 +229,7 @@ class gettext_reader {
         else {
             $header = $this->get_translation_number(0);
 
-            if (eregi("plural-forms: (.*)\n",$header,$regs)) {
+            if (preg_match('/plural-forms: (.*)\n/i',$header,$regs)) {
                 $expr = $regs[1];
             } else {
                 $expr = "nplurals=2; plural=n == 1 ? 0 : 1;";
